Fix tag button hiding behind auto scroll option

--- a/src/components/ImageQueue/ImageQueue.css
+++ b/src/components/ImageQueue/ImageQueue.css
@@ -65,6 +65,7 @@
   position: absolute;
   right: 2rem;
   top: 2rem;
+  z-index: 1000;
 }
 
 .image {
